tests/snapshots/pragma__pragma_no_line_break.snap
---
source: tests/pragma.rs
assertion_line: 21
expression: collect_tokens(&mut lexer)
snapshot_kind: text
---
[
  {
    "kind": {
      "PreprocDir": "MPragma"
    },
    "text": "#pragma deprecated foo",
    "range_start": 0,
    "range_end": 22,
    "delta": 0,
    "in_preprocessor": true
  },
  {
    "kind": "Eof",
    "text": "\u0000",
    "range_start": 22,
    "range_end": 22,
    "delta": 0,
    "in_preprocessor": false
  }
]
