tests/snapshots/pragma__pragma_simple.snap
---
source: tests/pragma.rs
assertion_line: 13
expression: collect_tokens(&mut lexer)
snapshot_kind: text
---
[
  {
    "kind": {
      "PreprocDir": "MPragma"
    },
    "text": "#pragma deprecated foo",
    "range_start": 0,
    "range_end": 22,
    "delta": 0,
    "in_preprocessor": true
  },
  {
    "kind": "Newline",
    "text": "\n",
    "range_start": 22,
    "range_end": 23,
    "delta": 0,
    "in_preprocessor": false
  },
  {
    "kind": "Eof",
    "text": "\u0000",
    "range_start": 23,
    "range_end": 23,
    "delta": 0,
    "in_preprocessor": false
  }
]
