tests/snapshots/pragma__pragma_trailing_line_comment.snap
---
source: tests/pragma.rs
assertion_line: 30
expression: collect_tokens(&mut lexer)
snapshot_kind: text
---
[
  {
    "kind": {
      "PreprocDir": "MPragma"
    },
    "text": "#pragma deprecated foo ",
    "range_start": 0,
    "range_end": 23,
    "delta": 0,
    "in_preprocessor": true
  },
  {
    "kind": {
      "Comment": "LineComment"
    },
    "text": "//bar",
    "range_start": 23,
    "range_end": 28,
    "delta": 0,
    "in_preprocessor": true
  },
  {
    "kind": "Newline",
    "text": "\n",
    "range_start": 28,
    "range_end": 29,
    "delta": 0,
    "in_preprocessor": false
  },
  {
    "kind": "Eof",
    "text": "\u0000",
    "range_start": 29,
    "range_end": 29,
    "delta": 0,
    "in_preprocessor": false
  }
]
