tests/snapshots/pragma__pragma_with_block_comment.snap
---
source: tests/pragma.rs
assertion_line: 48
expression: collect_tokens(&mut lexer)
snapshot_kind: text
---
[
  {
    "kind": {
      "PreprocDir": "MPragma"
    },
    "text": "#pragma deprecated foo /* */ bar",
    "range_start": 0,
    "range_end": 32,
    "delta": 0,
    "in_preprocessor": true
  },
  {
    "kind": "Newline",
    "text": "\n",
    "range_start": 32,
    "range_end": 33,
    "delta": 0,
    "in_preprocessor": false
  },
  {
    "kind": "Eof",
    "text": "\u0000",
    "range_start": 33,
    "range_end": 33,
    "delta": 0,
    "in_preprocessor": false
  }
]
