tests/snapshots/pragma__pragma_with_trailing_multiline_block_comment.snap
---
source: tests/pragma.rs
assertion_line: 68
expression: collect_tokens(&mut lexer)
snapshot_kind: text
---
[
  {
    "kind": {
      "PreprocDir": "MPragma"
    },
    "text": "#pragma deprecated foo ",
    "range_start": 0,
    "range_end": 23,
    "delta": 0,
    "in_preprocessor": true
  },
  {
    "kind": {
      "Comment": "BlockComment"
    },
    "text": "/*\n*/",
    "range_start": 23,
    "range_end": 28,
    "delta": 0,
    "in_preprocessor": false
  },
  {
    "kind": "Identifier",
    "text": "bar",
    "range_start": 29,
    "range_end": 32,
    "delta": 1,
    "in_preprocessor": false
  },
  {
    "kind": "Newline",
    "text": "\n",
    "range_start": 32,
    "range_end": 33,
    "delta": 0,
    "in_preprocessor": false
  },
  {
    "kind": "Eof",
    "text": "\u0000",
    "range_start": 33,
    "range_end": 33,
    "delta": 0,
    "in_preprocessor": false
  }
]
